[package]
name = "gefolge-websocket"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
futures = "0.3"
pyo3 = "0.13"
warp = "0.3"

[dependencies.async-proto]
version = "0.7"
features = ["warp"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.gefolge-web]
git = "https://github.com/dasgefolge/gefolge-web-rust"
branch = "main"

[dependencies.ricochet-robots-websocket]
git = "https://github.com/dasgefolge/ricochet-robots"
branch = "main"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "sync", "time"]
