[package]
name = "gefolge-websocket"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "gefolge_websocket"
path = "src/lib.rs"

[[bin]]
name = "gefolge-websocket"
path = "src/main.rs"

[dependencies]
futures = "0.3"
git2 = "0.15"
serde_json = "1"
warp = "0.3"

[dependencies.async-proto]
version = "0.15"
features = ["chrono-tz", "warp"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.6"
features = ["serde"]

[dependencies.ctrlflow]
git = "https://github.com/fenhl/ctrlflow"
branch = "main"
features = ["fs"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.gefolge-web]
git = "https://github.com/dasgefolge/gefolge-web-rust"
branch = "main"

[dependencies.pyo3]
version = "0.16"
features = ["auto-initialize"]

[dependencies.ricochet-robots-websocket]
git = "ssh://git@github.com/dasgefolge/ricochet-robots.git"
branch = "main"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "sync", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
